2008-02-28  Karl Berry  <karl@gnu.org>

	* info/infodoc.c (info_internal_help_text): more tweaks.
	Suggestions from Benno Schulenberg, 27 Feb 2008 23:44:17.

2008-02-28  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi (absolute): Add a missing "local".

2008-02-28  Akim Demaille  <akim@epita.fr>

	Let texi2dvi keep the trailing //.
	* bin/texi2dvi ($space, $tab): New.
	($IFS): Use them to be robust to zealous white space cleanups.
	(absolute): Preserve the trailing slashes.
	(tex_envvars): Add MPINPUTS, MFINPUTS, and TFMFONTS.

2008-02-28  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi: Don't use "local foo=`cmd`", because in that case
	failures of cmd, including with set -e, will go unnoticed.  So
	always first declare with local, then run the assignment.
	(index_file_p): Adjust to be usable with index.sty.
	* util/local.test: Make the test more robust.

2008-02-27  Karl Berry  <karl@gnu.org>

	* pretest 4.11.91.

	* info/infomap.c [!INFOKEY]: remove this whole block.  It is too
	confusing having two sets of key bindings.

	* info/infodoc.c (info_internal_help_text): more tweaks.
	Suggestions from Benno Schulenberg, 26 Feb 2008 00:34:22.

2008-02-26  Brendan O'Dea <bod@debian.org>  (tiny change)

	* util/texi2dvi: slightly reformat usage message for help2man.
	(sent by peb 26 Feb 2008 12:01:11)

	* install-info/install-info.c (print_help): keep two spaces
	between option name and description, or help2man can't do a good job.

2008-02-26  Peter Breitenlohner <peb@mppmu.mpg.de>

	* info/doc.h, info/echo-area.c, info/echo-area.h,
	info/footnotes.c, info/indices.c, info/info.c, info/info.h,
	info/infodoc.c, info/infokey.c, info/infomap.c, info/m-x.c,
	info/nodemenu.c, info/session.c, info/session.h,
	info/variables.c, info/variables.h, info/window.c,
	info/window.h:
	declare constant strings as such and remove
	many `(char *)' casts -- in particular for `_(...)'.
	Avoid gcc warnings (for --disable-nls and maybe without).

2008-02-25  Karl Berry  <karl@gnu.org>
